MGNLUI-525: Fixed exception on clicking dialog close button. Caused by recursively calling itself. Fixed asset link field styling where button overlapped input field.

--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/form.css
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/form.css
@@ -360,7 +360,7 @@ fieldset {
 * used by TextAndButtonField custom component.
 */
 input[type="text"].small-textfield {
-    width:400px !important;
+   width: 100%;
 }
 
 .v-form-field.v-richtextarea {
